--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<p>Bonjjour</p>
-
-<app-main-window></app-main-window>
+<!-- <p>Bonjjour</p> -->
+<router-outlet></router-outlet>
+<!-- <app-main-window></app-main-window> -->
