--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,3 +1,4 @@
 <p class="text-red-400">login works!</p>
 <p>data</p>
-<!-- <p *ngIf="data">{{ data }}</p> -->
+<p *ngIf="data">{{ data.message }}</p>
+<p *ngelse></p>
