--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -45,7 +45,7 @@
               <button
                 type="submit"
                 class="btn btn-primary rounded submit p-3 px-5"
-                (click)="goStatRepair()"
+                (click)="goListRepair()"
               >
                 Get Started
               </button>
