--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -47,7 +47,7 @@
                 class="btn btn-primary rounded submit p-3 px-5"
                 (click)="goListRepair()"
               >
-                Get Started
+                Sign In
               </button>
             </div>
           </form>
