--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -3,7 +3,6 @@
     <div class="row justify-content-center">
       <div class="col-md-6 text-center mb-5">
         <h1>Login</h1>
-        <a routerLink="/signUp">Sign Up</a>
       </div>
     </div>
     <div class="row justify-content-center">
@@ -12,7 +11,9 @@
           <div class="icon d-flex align-items-center justify-content-center">
             <span class="fa fa-user-o"></span>
           </div>
-          <h3 class="text-center mb-4">Have an account?</h3>
+          <h3 class="text-center mb-4">
+            <a routerLink="/signUp">Have an account?</a>
+          </h3>
           <form action="#" class="login-form">
             <div class="form-group">
               <input
