--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -17,7 +17,23 @@
               <input
                 type="text"
                 class="form-control rounded-left"
-                placeholder="Username"
+                placeholder="First name"
+                required
+              />
+            </div>
+            <div class="form-group d-flex">
+              <input
+                type="password"
+                class="form-control rounded-left"
+                placeholder="Last name"
+                required
+              />
+            </div>
+            <div class="form-group d-flex">
+              <input
+                type="password"
+                class="form-control rounded-left"
+                placeholder="Email"
                 required
               />
             </div>
