--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -31,7 +31,7 @@
             </div>
             <div class="form-group d-flex">
               <input
-                type="password"
+                type="passwordd"
                 class="form-control rounded-left"
                 placeholder="Email"
                 required
