--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -58,3 +58,7 @@
     </div>
   </div>
 </section>
+
+PHP is one of the programming languages used to build WordPress. Newer versions
+of PHP receive regular security updates and may increase your site’s
+performance. The minimum recommended version of PHP is 7.4.
