--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -14,21 +14,30 @@
           <h3 class="text-center mb-4">
             <a routerLink="/signUp">Have an account?</a>
           </h3>
-          <form action="#" class="login-form">
+          <form
+            action="#"
+            class="login-form"
+            #userlogin="ngForm"
+            (ngSubmit)="login(userlogin.value)"
+          >
             <div class="form-group">
               <input
-                type="text"
+                type="email"
+                name="email"
                 class="form-control rounded-left"
-                placeholder="Username"
+                placeholder="E-mail"
                 required
+                ngModel
               />
             </div>
             <div class="form-group d-flex">
               <input
                 type="password"
+                name="password"
                 class="form-control rounded-left"
                 placeholder="Password"
                 required
+                ngModel
               />
             </div>
             <div class="form-group d-md-flex">
@@ -47,7 +56,6 @@
               <button
                 type="submit"
                 class="btn btn-primary rounded submit p-3 px-5"
-                (click)="goListRepair()"
               >
                 Sign In
               </button>
