--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -12,9 +12,16 @@
             <span class="fa fa-user-o"></span>
           </div>
           <h3 class="text-center mb-4">New account</h3>
-          <form action="#" class="login-form">
+          <form
+            action="#"
+            #userSignUp="ngForm"
+            (ngSubmit)="signUp(userSignUp.value)"
+            class="login-form"
+          >
             <div class="form-group">
               <input
+                name="firstName"
+                ngModel
                 type="text"
                 class="form-control rounded-left"
                 placeholder="First name"
@@ -23,7 +30,9 @@
             </div>
             <div class="form-group d-flex">
               <input
-                type="password"
+                name="lastname"
+                ngModel
+                type="text"
                 class="form-control rounded-left"
                 placeholder="Last name"
                 required
@@ -31,7 +40,9 @@
             </div>
             <div class="form-group d-flex">
               <input
-                type="password"
+                name="email"
+                ngModel
+                type="email"
                 class="form-control rounded-left"
                 placeholder="Email"
                 required
@@ -39,6 +50,8 @@
             </div>
             <div class="form-group d-flex">
               <input
+                name="password"
+                ngModel
                 type="password"
                 class="form-control rounded-left"
                 placeholder="Password"
@@ -48,13 +61,11 @@
             <br />
             <br />
             <div class="form-group">
-              <button
+              <input
                 type="submit"
                 class="btn btn-primary rounded submit p-3 px-5"
-                (click)="goLogin()"
-              >
-                Create Account
-              </button>
+                value=" Create Account"
+              />
             </div>
           </form>
         </div>
