--- a/src/app/components/customer/car-depot-form/car-depot-form.component.html
+++ b/src/app/components/customer/car-depot-form/car-depot-form.component.html
@@ -190,7 +190,7 @@
             </div> -->
             <button
               class="bg-blue-400 text-white active:bg-blue-600 font-bold uppercase text-xs px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none mr-1 ease-linear transition-all duration-150"
-              type="button"
+              type="submit"
             >
               Add
             </button>
