--- a/src/app/components/customer/car-depot-form/car-depot-form.component.html
+++ b/src/app/components/customer/car-depot-form/car-depot-form.component.html
@@ -19,7 +19,7 @@
               Car information
             </h6>
             <div class="flex flex-wrap">
-              <div class="w-full lg:w-4/12 px-4">
+              <div class="w-full lg:w-4/12 md:w-12/12 px-4">
                 <div class="relative w-full mb-3">
                   <label
                     class="block uppercase text-blueGray-600 text-xs font-bold mb-2"
@@ -30,13 +30,14 @@
                   <input
                     type="text"
                     class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150"
-                    name="registrationNumber"
+                    name="registration_number"
+                    [defaultValue]="carFormData.registration_number"
                     ngModel
                   />
                 </div>
               </div>
 
-              <div class="w-full lg:w-4/12 px-4">
+              <div class="w-full lg:w-4/12 md:w-12/12 px-4">
                 <div class="relative w-full mb-3">
                   <label
                     class="block uppercase text-blueGray-600 text-xs font-bold mb-2"
@@ -47,13 +48,13 @@
                   <input
                     type="email"
                     class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150"
-                    value="jesse@example.com"
+                    [defaultValue]="carFormData.brand"
                     name="brand"
                     ngModel
                   />
                 </div>
               </div>
-              <div class="w-full lg:w-4/12 px-4">
+              <div class="w-full lg:w-4/12 md:w-full px-4">
                 <div class="relative w-full mb-3">
                   <label
                     class="block uppercase text-blueGray-600 text-xs font-bold mb-2"
@@ -65,6 +66,7 @@
                     type="email"
                     class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150"
                     name="model"
+                    [defaultValue]="carFormData.model"
                     ngModel
                   />
                 </div>
