--- a/src/app/views/login/manager-login/manager-login.component.html
+++ b/src/app/views/login/manager-login/manager-login.component.html
@@ -17,16 +17,16 @@
           <form
             action="#"
             class="login-form"
-            #userLogin="ngForm"
-            (ngSubmit)="login(userLogin.value)"
+            #credential="ngForm"
+            (ngSubmit)="login(credential.value)"
           >
             <div class="form-group">
               <input
-                type="email"
-                name="email"
+                type="text"
+                name="username"
                 value="tafinasoa35@gmail.com"
                 class="form-control rounded-left"
-                placeholder="E-mail"
+                placeholder="Username"
                 required
                 ngModel
               />
@@ -41,6 +41,19 @@
                 required
                 ngModel
               />
+            </div>
+            <div class="form-group d-flex">
+              <select
+                name="logAs"
+                id=""
+                class="form-control rounded-left"
+                placeholder="Log as"
+                required
+                ngModel
+              >
+                <option value="ra">Workshop manager</option>
+                <option value="rf">finance manager</option>
+              </select>
             </div>
             <div class="form-group d-md-flex">
               <div class="w-50">
