integration sign in workshop manager

--- a/src/app/views/login/manager-login/manager-login.component.html
+++ b/src/app/views/login/manager-login/manager-login.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-6 text-center mb-5">
-        <h1>Login</h1>
+        <h1>Manager Login</h1>
       </div>
     </div>
     <div class="row justify-content-center">
@@ -24,7 +24,7 @@
               <input
                 type="text"
                 name="username"
-                value="tafinasoa35@gmail.com"
+                value=""
                 class="form-control rounded-left"
                 placeholder="Username"
                 required
@@ -37,7 +37,7 @@
                 name="password"
                 class="form-control rounded-left"
                 placeholder="Password"
-                value="lorem"
+                value=""
                 required
                 ngModel
               />
