--- a/src/app/components/workshop-manager/repairs-unconfirmed/repairs-unconfirmed.component.scss
+++ b/src/app/components/workshop-manager/repairs-unconfirmed/repairs-unconfirmed.component.scss
@@ -1,15 +1,3 @@
-body {
-  font-family: 'lato', sans-serif;
-}
-
-.container {
-  max-width: 1000px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
 h2 {
   font-size: 26px;
   margin: 20px 0;
@@ -30,7 +18,7 @@ h2 {
   }
 
   .table-header {
-    background-color: #95A5A6;
+    background-color: #cedee9;
     font-size: 14px;
     text-transform: uppercase;
     letter-spacing: 0.03em;
