--- a/src/app/components/sidebar/customer-sidebar/customer-sidebar.component.html
+++ b/src/app/components/sidebar/customer-sidebar/customer-sidebar.component.html
@@ -171,3 +171,7 @@
     </div>
   </div>
 </nav>
+
+Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel reprehenderit
+expedita accusantium, illum quasi asperiores tempora totam ullam iusto a dolorem
+aliquam officiis! Consequuntur nam, voluptatem natus harum at vero?
