--- a/src/app/views/login/customer-login/customer-login.component.html
+++ b/src/app/views/login/customer-login/customer-login.component.html
@@ -12,7 +12,7 @@
             <span class="fa fa-user-o"></span>
           </div>
           <h3 class="text-center mb-4">
-            <a routerLink="/signUp">Have an account?</a>
+            <a routerLink="/customer/signup">Have an account?</a>
           </h3>
           <form
             action="#"
