success sign up by taf

--- a/src/app/views/signup/customer-signup/customer-signup.component.html
+++ b/src/app/views/signup/customer-signup/customer-signup.component.html
@@ -20,7 +20,7 @@
           >
             <div class="form-group">
               <input
-                name="firstName"
+                name="firstname"
                 ngModel
                 type="text"
                 class="form-control rounded-left"
