--- a/src/app/components/customer/car-depot-form/car-depot-form.component.html
+++ b/src/app/components/customer/car-depot-form/car-depot-form.component.html
@@ -11,15 +11,16 @@
         </div>
         <div class="flex-auto px-4 lg:px-10 py-10 pt-0">
           <form
+            class="p-10"
             action="#"
             #carData="ngForm"
             (ngSubmit)="depositCar(carData.value)"
           >
-            <h6 class="text-blueGray-400 text-sm mt-3 mb-6 font-bold uppercase">
+            <h6 class="text-gray-400 text-sm mt-3 mb-6 font-bold uppercase">
               Car information
             </h6>
-            <div class="flex flex-wrap">
-              <div class="w-full lg:w-4/12 md:w-12/12 px-4">
+            <div class="flex flex-wrap pt-5">
+              <div class="w-full lg:w-4/12 md:w-12/12">
                 <div class="relative w-full mb-3">
                   <label
                     class="block uppercase text-blueGray-600 text-xs font-bold mb-2"
