--- a/src/app/components/sidebar/customer-sidebar/customer-sidebar.component.html
+++ b/src/app/components/sidebar/customer-sidebar/customer-sidebar.component.html
@@ -68,21 +68,20 @@
           />
         </div>
       </form>
-
       <!-- Divider -->
       <hr class="my-4 md:min-w-full" />
       <!-- Heading -->
       <h6
         class="md:min-w-full text-blueGray-500 text-xs uppercase font-bold block pt-1 pb-4 no-underline"
       >
-        Admin Layout Pages
+        Customer
       </h6>
       <!-- Navigation -->
 
       <ul class="md:flex-col md:min-w-full flex flex-col list-none">
         <li class="items-center">
           <a
-            [routerLink]="['car-depot-form']"
+            [routerLink]=""
             class="text-xs uppercase py-3 font-bold block"
             routerLinkActive
             #adminDashboard="routerLinkActive"
@@ -101,15 +100,34 @@
             Dashboard
           </a>
         </li>
-
+        <hr class="my-4 md:min-w-full" />
         <li class="items-center">
           <a
-            [routerLink]="['/admin/settings']"
+            [routerLink]="['car-depot-form']"
             class="text-xs uppercase py-3 font-bold block"
             routerLinkActive
-            #adminSettings="routerLinkActive"
+            #depotCar="routerLinkActive"
             [ngClass]="
-              adminSettings.isActive
+              depotCar.isActive
+                ? 'text-red-600 hover:text-red-700'
+                : 'text-blueGray-700 hover:text-blueGray-500'
+            "
+          >
+            <i
+              class="fas fa-tv mr-2 text-sm"
+              [ngClass]="depotCar.isActive ? 'opacity-75' : 'text-blueGray-300'"
+            ></i>
+            Depot car
+          </a>
+        </li>
+        <li class="items-center">
+          <a
+            [routerLink]="['unpaid-repairs']"
+            class="text-xs uppercase py-3 font-bold block"
+            routerLinkActive
+            #unpaidRepairs="routerLinkActive"
+            [ngClass]="
+              unpaidRepairs.isActive
                 ? 'text-red-600 hover:text-red-700'
                 : 'text-blueGray-700 hover:text-blueGray-500'
             "
@@ -117,54 +135,10 @@
             <i
               class="fas fa-tools mr-2 text-sm"
               [ngClass]="
-                adminSettings.isActive ? 'opacity-75' : 'text-blueGray-300'
+                unpaidRepairs.isActive ? 'opacity-75' : 'text-blueGray-300'
               "
             ></i>
-            Settings
-          </a>
-        </li>
-
-        <li class="items-center">
-          <a
-            [routerLink]="['/admin/tables']"
-            class="text-xs uppercase py-3 font-bold block"
-            routerLinkActive
-            #adminTables="routerLinkActive"
-            [ngClass]="
-              adminTables.isActive
-                ? 'text-red-600 hover:text-red-700'
-                : 'text-blueGray-700 hover:text-blueGray-500'
-            "
-          >
-            <i
-              class="fas fa-table mr-2 text-sm"
-              [ngClass]="
-                adminTables.isActive ? 'opacity-75' : 'text-blueGray-300'
-              "
-            ></i>
-            Tables
-          </a>
-        </li>
-
-        <li class="items-center">
-          <a
-            [routerLink]="['/admin/maps']"
-            class="text-xs uppercase py-3 font-bold block"
-            routerLinkActive
-            #adminMaps="routerLinkActive"
-            [ngClass]="
-              adminMaps.isActive
-                ? 'text-red-600 hover:text-red-700'
-                : 'text-blueGray-700 hover:text-blueGray-500'
-            "
-          >
-            <i
-              class="fas fa-map-marked mr-2 text-sm"
-              [ngClass]="
-                adminMaps.isActive ? 'opacity-75' : 'text-blueGray-300'
-              "
-            ></i>
-            Maps
+            Unpaid repairs
           </a>
         </li>
       </ul>
