--- a/src/app/components/sidebar/workshop-manager-sidebar/workshop-manager-sidebar.component.html
+++ b/src/app/components/sidebar/workshop-manager-sidebar/workshop-manager-sidebar.component.html
@@ -106,30 +106,28 @@
             [routerLink]="['/workshop-manager/unconfirmed-repairs']"
             class="text-xs uppercase py-3 font-bold block"
             routerLinkActive
-            #adminSettings="routerLinkActive"
+            #repairs="routerLinkActive"
             [ngClass]="
-              adminSettings.isActive
+              repairs.isActive
                 ? 'text-red-600 hover:text-red-700'
                 : 'text-blueGray-700 hover:text-blueGray-500'
             "
           >
             <i
               class="fas fa-tools mr-2 text-sm"
-              [ngClass]="
-                adminSettings.isActive ? 'opacity-75' : 'text-blueGray-300'
-              "
+              [ngClass]="repairs.isActive ? 'opacity-75' : 'text-blueGray-300'"
             ></i>
             Repairs
           </a>
         </li>
         <li class="items-center">
           <a
-            [routerLink]="['/workshop-manager/unpaid-payment']"
+            [routerLink]="['/workshop-manager/repairs-on-process']"
             class="text-xs uppercase py-3 font-bold block"
             routerLinkActive
-            #adminSettings="routerLinkActive"
+            #repairProcess="routerLinkActive"
             [ngClass]="
-              adminSettings.isActive
+              repairProcess.isActive
                 ? 'text-red-600 hover:text-red-700'
                 : 'text-blueGray-700 hover:text-blueGray-500'
             "
@@ -137,10 +135,10 @@
             <i
               class="fas fa-tools mr-2 text-sm"
               [ngClass]="
-                adminSettings.isActive ? 'opacity-75' : 'text-blueGray-300'
+                repairProcess.isActive ? 'opacity-75' : 'text-blueGray-300'
               "
             ></i>
-            Payment
+            Repairs process
           </a>
         </li>
         <li class="items-center">
