--- a/src/app/components/workshop-manager/repairs-on-process/repairs-on-process.component.html
+++ b/src/app/components/workshop-manager/repairs-on-process/repairs-on-process.component.html
@@ -9,7 +9,12 @@
             <h6 class="text-blueGray-700 text-xl font-bold">Pending to-dos</h6>
           </div>
         </div>
-        <div class="flex-auto px-4 lg:px-10 py-10 pt-0"></div>
+        <div class="flex-auto px-4 lg:px-10 py-10 pt-0">
+          <button mat-raised-button color="primary" (click)="openDialog()">
+            Open dialog
+          </button>
+          <router-outlet></router-outlet>
+        </div>
         <hr />
         <div class="relative overflow-x-auto">
           <table
