Default value customer success

--- a/src/app/views/login/customer-login/customer-login.component.html
+++ b/src/app/views/login/customer-login/customer-login.component.html
@@ -28,7 +28,7 @@
                 class="form-control rounded-left"
                 placeholder="E-mail"
                 required
-                ngModel
+                [(ngModel)]="myEmail"
               />
             </div>
             <div class="form-group d-flex">
@@ -39,7 +39,7 @@
                 placeholder="Password"
                 value="lorem"
                 required
-                ngModel
+                [(ngModel)]="myPassword"
               />
             </div>
             <div class="form-group d-md-flex">
