--- a/src/app/views/login/manager-login/manager-login.component.html
+++ b/src/app/views/login/manager-login/manager-login.component.html
@@ -28,7 +28,7 @@
                 class="form-control rounded-left"
                 placeholder="Username"
                 required
-                ngModel
+                [(ngModel)]="myUsername"
               />
             </div>
             <div class="form-group d-flex">
@@ -39,7 +39,7 @@
                 placeholder="Password"
                 value=""
                 required
-                ngModel
+                [(ngModel)]="myPassword"
               />
             </div>
             <div class="form-group d-flex">
