--- a/src/app/components/sidebar/financial-manager-sidebar/financial-manager-sidebar.component.html
+++ b/src/app/components/sidebar/financial-manager-sidebar/financial-manager-sidebar.component.html
@@ -103,7 +103,7 @@
         </li>
         <li class="items-center">
           <a
-            [routerLink]="['/workshop-manager/unconfirmed-repairs']"
+            [routerLink]="['']"
             class="text-xs uppercase py-3 font-bold block"
             routerLinkActive
             #adminSettings="routerLinkActive"
@@ -141,6 +141,27 @@
               "
             ></i>
             Payment
+          </a>
+        </li>
+        <li class="items-center">
+          <a
+            [routerLink]="['/financial-manager/repairs-unpaid']"
+            class="text-xs uppercase py-3 font-bold block"
+            routerLinkActive
+            #adminSettings="routerLinkActive"
+            [ngClass]="
+              adminSettings.isActive
+                ? 'text-red-600 hover:text-red-700'
+                : 'text-blueGray-700 hover:text-blueGray-500'
+            "
+          >
+            <i
+              class="fas fa-tools mr-2 text-sm"
+              [ngClass]="
+                adminSettings.isActive ? 'opacity-75' : 'text-blueGray-300'
+              "
+            ></i>
+            Validation Payment
           </a>
         </li>
         <li class="items-center">
