--- a/src/app/views/homepage/homepage.component.html
+++ b/src/app/views/homepage/homepage.component.html
@@ -1,3 +1,48 @@
-<p>homepage works!</p>
-<a routerLink="customer/login"><h1>Login as customer</h1> </a>
-<a routerLink="manager/login"><h1>Login as manager</h1> </a>
+<div class="flex flex-col items-center justify-center gap-10 h-screen">
+  <div>
+    <p>homepage works!</p>
+  </div>
+  <div>
+    <button
+      class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full"
+    >
+      <a routerLink="customer/login"><h1>Login as customer</h1> </a>
+    </button>
+  </div>
+  <div>
+    <button
+      class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full"
+    >
+      <a routerLink="manager/login"><h1>Login as manager</h1> </a>
+    </button>
+  </div>
+</div>
+
+<footer
+  class="p-4 bg-white rounded-lg shadow md:flex md:items-center md:justify-between md:p-6 dark:bg-gray-800"
+>
+  <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400"
+    >© 2023
+    <a href="https://flowbite.com/" class="hover:underline">
+      <b class="text-black"
+        >RABENANDRASANA Tafinsoa - RANDRIANARISOA Lalatiana Mihaja Antonio</b
+      > </a
+    >. All Rights Reserved.
+  </span>
+  <ul
+    class="flex flex-wrap items-center mt-3 text-sm text-gray-500 dark:text-gray-400 sm:mt-0"
+  >
+    <li>
+      <a href="#" class="mr-4 hover:underline md:mr-6">About</a>
+    </li>
+    <li>
+      <a href="#" class="mr-4 hover:underline md:mr-6">Privacy Policy</a>
+    </li>
+    <li>
+      <a href="#" class="mr-4 hover:underline md:mr-6">Licensing</a>
+    </li>
+    <li>
+      <a href="#" class="hover:underline">Contact</a>
+    </li>
+  </ul>
+</footer>
