--- a/src/app/components/customer/repairs-advancement/repairs-advancement.component.html
+++ b/src/app/components/customer/repairs-advancement/repairs-advancement.component.html
@@ -19,11 +19,10 @@
               class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400"
             >
               <tr>
+                <th scope="col" class="px-6 py-3">Advancement</th>
                 <th scope="col" class="px-6 py-3">Brand</th>
                 <th scope="col" class="px-6 py-3">Model</th>
                 <th scope="col" class="px-6 py-3">Registration number</th>
-                <th scope="col" class="px-6 py-3">Total paid</th>
-                <th scope="col" class="px-6 py-3">Total amount</th>
               </tr>
             </thead>
             <tbody>
@@ -41,7 +40,9 @@
                     >
                       <div
                         class="bg-blue-600 h-2.5 rounded-full"
-                        style="width: 45%"
+                        style="width: {{
+                          (repair.undone * 100) / (repair.done + repair.undone)
+                        }}%"
                       ></div>
                     </div>
                     <!-- Progress bar -->
@@ -51,7 +52,7 @@
                     {{ repair.car.registration_number }}
                   </td>
                   <td class="px-6 py-4">
-                    <!-- {{ unitRepair.createdAt | date : "yyyy-MM-dd" }} -->
+                    {{ repair.car.registration_number }}
                   </td>
                 </tr>
               </ng-container>
