--- a/src/app/components/customer/unpaid-repairs/unpaid-repairs.component.html
+++ b/src/app/components/customer/unpaid-repairs/unpaid-repairs.component.html
@@ -9,44 +9,49 @@
             <h6 class="text-blueGray-700 text-xl font-bold">Car depot</h6>
           </div>
         </div>
-        <div class="relative overflow-x-auto">
-          <table
-            class="w-full text-sm text-left text-gray-500 dark:text-gray-400"
-          >
-            <thead
-              class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400"
-            >
-              <tr>
-                <th scope="col" class="px-6 py-3">Brand</th>
-                <th scope="col" class="px-6 py-3">Model</th>
-                <th scope="col" class="px-6 py-3">Registration number</th>
-                <th scope="col" class="px-6 py-3">Total paid</th>
-                <th scope="col" class="px-6 py-3">Total amount</th>
-              </tr>
-            </thead>
-            <tbody>
-              <ng-container *ngFor="let repair of unpaid; let i = index">
-                <tr
-                  class="bg-white border-b dark:bg-gray-800 dark:border-gray-700"
-                >
-                  <th
-                    scope="row"
-                    class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
-                  >
-                    {{ repair.car.brand }}
-                  </th>
-                  <td class="px-6 py-4">{{ repair.car.model }}</td>
-                  <td class="px-6 py-4">
-                    {{ repair.car.registration_number }}
-                  </td>
-                  <td class="px-6 py-4">
-                    <!-- {{ unitRepair.createdAt | date : "yyyy-MM-dd" }} -->
-                  </td>
-                </tr>
-              </ng-container>
-            </tbody>
-          </table>
+        <div *ngIf="loader; else content" class="mt-5 text-center">
+          <app-spinning-loader></app-spinning-loader>
         </div>
+        <ng-template #content>
+          <div class="relative overflow-x-auto">
+            <table
+              class="w-full text-sm text-left text-gray-500 dark:text-gray-400"
+            >
+              <thead
+                class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400"
+              >
+                <tr>
+                  <th scope="col" class="px-6 py-3">Brand</th>
+                  <th scope="col" class="px-6 py-3">Model</th>
+                  <th scope="col" class="px-6 py-3">Registration number</th>
+                  <th scope="col" class="px-6 py-3">Total paid</th>
+                  <th scope="col" class="px-6 py-3">Total amount</th>
+                </tr>
+              </thead>
+              <tbody>
+                <ng-container *ngFor="let repair of unpaid; let i = index">
+                  <tr
+                    class="bg-white border-b dark:bg-gray-800 dark:border-gray-700"
+                  >
+                    <th
+                      scope="row"
+                      class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                    >
+                      {{ repair.car.brand }}
+                    </th>
+                    <td class="px-6 py-4">{{ repair.car.model }}</td>
+                    <td class="px-6 py-4">
+                      {{ repair.car.registration_number }}
+                    </td>
+                    <td class="px-6 py-4">
+                      <!-- {{ unitRepair.createdAt | date : "yyyy-MM-dd" }} -->
+                    </td>
+                  </tr>
+                </ng-container>
+              </tbody>
+            </table>
+          </div>
+        </ng-template>
       </div>
     </div>
   </div>
