--- a/src/app/components/sidebar/customer-sidebar/customer-sidebar.component.html
+++ b/src/app/components/sidebar/customer-sidebar/customer-sidebar.component.html
@@ -146,9 +146,9 @@
             [routerLink]="['advancement-repairs']"
             class="text-xs uppercase py-3 font-bold block"
             routerLinkActive
-            #unpaidRepairs="routerLinkActive"
+            #repairAdvancement="routerLinkActive"
             [ngClass]="
-              unpaidRepairs.isActive
+              repairAdvancement.isActive
                 ? 'text-red-600 hover:text-red-700'
                 : 'text-blueGray-700 hover:text-blueGray-500'
             "
@@ -156,10 +156,10 @@
             <i
               class="fas fa-tools mr-2 text-sm"
               [ngClass]="
-                unpaidRepairs.isActive ? 'opacity-75' : 'text-blueGray-300'
+                repairAdvancement.isActive ? 'opacity-75' : 'text-blueGray-300'
               "
             ></i>
-            Advancement repairs
+            Repairs advancement
           </a>
         </li>
         <li class="items-center">
