--- a/src/app/components/customer/details-advancement/details-advancement.component.html
+++ b/src/app/components/customer/details-advancement/details-advancement.component.html
@@ -46,6 +46,7 @@
               >
                 <tr
                   class="bg-white border-b dark:bg-gray-800 dark:border-gray-700"
+                  [ngClass]="todo.status ? 'bg-green-100' : 'bg-red-100'"
                 >
                   <td class="px-6 py-4">
                     {{ todo.label }}
