progress bar update success

--- a/src/app/components/customer/repairs-advancement/repairs-advancement.component.html
+++ b/src/app/components/customer/repairs-advancement/repairs-advancement.component.html
@@ -43,7 +43,7 @@
                         class="bg-blue-600 h-2.5 rounded-full"
                         style="width: {{
                           (100 / (repair.data.done + repair.data.undone)) *
-                            repair.data.undone
+                            repair.data.done
                         }}%"
                       ></div>
                     </div>
